<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hive_camera</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xogns2079@gmail.com">ryu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>realsense2_camera_msgs</depend>
  <build_depend>sensor_msgs</build_depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <build_depend>opencv</build_depend>

  <exec_depend>opencv</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
